Migration from array to lists and add checkSolvedSudoku